# digital-twin

./: .gitignore
.github/workflows/: deploy-frontend.yml  deploy-scraping-api.yml  deploy-trading-api.yml  deploy-twin-api.yml
backend/: README.md  context.py  deploy.py  pyproject.toml  requirements.txt  resources.py  server.py
backend/data/: facts.json  me.txt  style.txt  summary.txt
frontend/: README.md  amplifyConfig.ts  package-lock.json  package.json  tsconfig.json
frontend/app/: globals.css  layout.tsx  not-found.tsx  page.tsx
frontend/app/blogs/: page.tsx
frontend/app/contact/: page.tsx
frontend/app/talk/: page.tsx
frontend/components/: BlogList.tsx  BubblingLoader.tsx  ChatWindow.tsx  HealthStatus.tsx  LoginModal.tsx  StockGrid.tsx  TradingList.tsx  TradingMetrics.tsx  twin.tsx
frontend/lib/: api.ts  blogs.ts  trading.ts  utils.ts
scripts/: bootstrap.sh  deploy-frontend.sh  deploy-service.sh  deploy.sh  destroy.sh  setup-infra.sh
scripts_bak/: deploy.sh
stock_scraper/: README.md  auth.py  db.py  deploy.py  pyproject.toml  requirements.txt  scraper.py  screener_utility.py  server.py
terraform/: README.md  versions.tf
terraform/bootstrap/: main.tf  outputs.tf  versions.tf
terraform/foundation/: main.tf  outputs.tf  service-endpoints.auto.tfvars.json  terraform.tfvars  variables.tf  versions.tf
trading/: README.md  auth.py  deploy.py  dhan_broker.py  pyproject.toml  requirements.txt  run.sh  server.py  test_broker_tools.py
trading/test_events/: call_list_holdings.json  call_pnl_week.json  tools_list.json
(+25 files in other folders)
